--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1913,6 +1913,82 @@ ol {
 	top: 14px;
 }
 
+
+/*---------------------
+  Change Password
+-----------------------*/
+
+.change_password {
+	position: relative;
+	padding-left: 145px;
+}
+
+.change_password h3 {
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Oswald", sans-serif;
+	margin-bottom: 30px;
+}
+
+.change_password form .input__item {
+	position: relative;
+	width: 370px;
+	margin-bottom: 20px;
+}
+
+.change_password form .input__item:before {
+	position: absolute;
+	left: 50px;
+	top: 10px;
+	height: 30px;
+	width: 1px;
+	background: #b7b7b7;
+	content: "";
+}
+
+.change_password form .input__item input {
+	height: 50px;
+	width: 100%;
+	font-size: 15px;
+	color: #b7b7b7;
+	background: #ffffff;
+	border: none;
+	padding-left: 76px;
+}
+
+.change_password form .input__item input::-webkit-input-placeholder {
+	color: #b7b7b7;
+}
+
+.change_password form .input__item input::-moz-placeholder {
+	color: #b7b7b7;
+}
+
+.change_password form .input__item input:-ms-input-placeholder {
+	color: #b7b7b7;
+}
+
+.change_password form .input__item input::-ms-input-placeholder {
+	color: #b7b7b7;
+}
+
+.change_password form .input__item input::placeholder {
+	color: #b7b7b7;
+}
+
+.change_password form .input__item span {
+	color: #b7b7b7;
+	font-size: 20px;
+	position: absolute;
+	left: 15px;
+	top: 13px;
+}
+
+.change_password form button {
+	border-radius: 0;
+	margin-top: 10px;
+}
+
 /*---------------------
   Sign Up
 -----------------------*/
