- 비밀번호 전송 로직 - 비밀번호 체크 로직

--- a/src/main/resources/templates/auth/change-password.html
+++ b/src/main/resources/templates/auth/change-password.html
@@ -31,23 +31,43 @@
   <div class="container">
     <div class="col-lg-6">
       <div class="change_password" style="left: 45%;">
-        <form action="#">
+        <form>
           <div class="input__item">
-            <input id="newPassword" type="password" name="newPassword" placeholder="비밀번호">
+            <input id="newPassword" type="password" placeholder="비밀번호">
             <span class="icon_lock"></span>
           </div>
           <div class="input__item">
             <input id="checkPassword" type="password" placeholder="비밀번호 재입력">
             <span class="icon_lock"></span>
           </div>
-          <button type="submit" class="site-btn">Confirm</button>
+          <button type="button" class="site-btn" th:onclick="|sendPassword(${memberId})|">Confirm</button>
         </form>
       </div>
     </div>
   </div>
 </section>
 <!-- Login Section End -->
+<script>
+  function sendPassword(id) {
+    let newPw = $('#newPassword').val();
+    let chkPw = $('#checkPassword').val();
 
+    if (isEmpty(newPw) || isEmpty(chkPw)) {
+      Message.warning("비밀번호를 입력해 주세요.");
+    } else {
+      if (newPw.isNotEquals(chkPw)) {
+        Message.warning("입력하신 비밀번호가 서로 다릅니다.");
+        return;
+      }
+      let url = "/api/login/change-password"
+      let param = {
+        id : id,
+        newPassword: newPw,
+      }
+      API.GetData(url, param);
+    }
+  }
+</script>
 </body>
 
 <!-- Footer Section Begin -->
