- 비밀번호 변경 로직 완성

--- a/src/main/resources/templates/auth/change-password.html
+++ b/src/main/resources/templates/auth/change-password.html
@@ -62,9 +62,9 @@
       let url = "/api/login/change-password"
       let param = {
         id : id,
-        newPassword: newPw,
+        password : newPw,
       }
-      API.GetData(url, param);
+      API.PostData(url, param);
     }
   }
 </script>
