--- a/src/main/resources/templates/main/anime-details.html
+++ b/src/main/resources/templates/main/anime-details.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb__links">
-                        <a th:href="@{/}"><i class="fa fa-home"></i> Home</a>
+                        <a th:href="@{/}"><i class="fa fa-home"></i> 홈</a>
                         <a th:href="@{/profile/category}">이프랜더 정보</a>
                         <span>상세정보</span>
                     </div>
