--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -40,6 +40,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="anime__details__review">
+                    <!-- TODO 댓글 기능 추가해야함                       -->
                         <div class="section-title">
                             <h5>Reviews</h5>
                         </div>
