--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -38,77 +38,51 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8">
-                    <div class="anime__details__review">
-                    <!-- TODO 댓글 기능 추가해야함                       -->
+                <div class="col-lg-8 col-md-8">
+                    <div class="anime__details__form">
                         <div class="section-title">
-                            <h5>Reviews</h5>
+                            <h5>Write Comment</h5>
                         </div>
-                        <div class="anime__review__item">
+                        <form id="comment-form" onsubmit="return false;">
+                            <textarea id="comment" placeholder="300자 이내로 작성해주세요."></textarea>
+                            <button id="comment-button" onclick="writeComment();"><i class="fa fa-location-arrow"></i> Comment</button>
+                        </form>
+                    </div>
+                    <div id="commentDiv" class="anime__details__review">
+                        <div class="section-title">
+                            <h5>Comment</h5>
+                        </div>
+                        <div class="anime__review__item" th:each="comment : ${profile.comments}">
                             <div class="anime__review__item__pic">
-                                <img src="img/anime/review-1.jpg" alt="">
+                                <img th:src="@{/images/profile/basic-profile-img.png}" alt="">
                             </div>
                             <div class="anime__review__item__text">
-                                <h6>Chris Curry - <span>1 Hour ago</span></h6>
-                                <p>whachikan Just noticed that someone categorized this as belonging to the genre
-                                "demons" LOL</p>
-                            </div>
-                        </div>
-                        <div class="anime__review__item">
-                            <div class="anime__review__item__pic">
-                                <img src="img/anime/review-2.jpg" alt="">
-                            </div>
-                            <div class="anime__review__item__text">
-                                <h6>Lewis Mann - <span>5 Hour ago</span></h6>
-                                <p>Finally it came out ages ago</p>
-                            </div>
-                        </div>
-                        <div class="anime__review__item">
-                            <div class="anime__review__item__pic">
-                                <img src="img/anime/review-3.jpg" alt="">
-                            </div>
-                            <div class="anime__review__item__text">
-                                <h6>Louis Tyler - <span>20 Hour ago</span></h6>
-                                <p>Where is the episode 15 ? Slow update! Tch</p>
-                            </div>
-                        </div>
-                        <div class="anime__review__item">
-                            <div class="anime__review__item__pic">
-                                <img src="img/anime/review-4.jpg" alt="">
-                            </div>
-                            <div class="anime__review__item__text">
-                                <h6>Chris Curry - <span>1 Hour ago</span></h6>
-                                <p>whachikan Just noticed that someone categorized this as belonging to the genre
-                                "demons" LOL</p>
-                            </div>
-                        </div>
-                        <div class="anime__review__item">
-                            <div class="anime__review__item__pic">
-                                <img src="img/anime/review-5.jpg" alt="">
-                            </div>
-                            <div class="anime__review__item__text">
-                                <h6>Lewis Mann - <span>5 Hour ago</span></h6>
-                                <p>Finally it came out ages ago</p>
-                            </div>
-                        </div>
-                        <div class="anime__review__item">
-                            <div class="anime__review__item__pic">
-                                <img src="img/anime/review-6.jpg" alt="">
-                            </div>
-                            <div class="anime__review__item__text">
-                                <h6>Louis Tyler - <span>20 Hour ago</span></h6>
-                                <p>Where is the episode 15 ? Slow update! Tch</p>
+                                <h6><span th:text="${comment.iflandNickName}" style="color: #ffffff"></span><span th:text="| - ${comment.dayAgo}|"></span></h6>
+                                <p th:text="${comment.contents}"></p>
                             </div>
                         </div>
                     </div>
-                    <div class="anime__details__form">
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <div class="anime__details__sidebar">
                         <div class="section-title">
-                            <h5>Your Comment</h5>
+                            <h5>you might like! 😉</h5>
                         </div>
-                        <form action="#">
-                            <textarea placeholder="Your Comment"></textarea>
-                            <button type="submit"><i class="fa fa-location-arrow"></i> Review</button>
-                        </form>
+                        <div th:each="recommend : ${recommendList}">
+                            <a th:href="@{/profile/detail/{id}(id = ${recommend.id})}">
+                                <div class="product__sidebar__view__item set-bg" th:style="${'background-image: url('+ recommend.image + ')'}">
+                                    <div class="like">
+                                        <i class="fa fa-heart"></i>
+                                        <div class="like_count" th:text="${recommend.likeCount}" style="float: right; margin-left: 5px;"></div>
+                                    </div>
+                                    <div class="view">
+                                        <i class="fa fa-eye"></i>
+                                        <div class="view_count" th:text="${recommend.viewCount}" style="float: right; margin-left: 5px;"></div>
+                                    </div>
+                                    <h5 style="font-weight: bolder;" th:text="${recommend.iflandNickName}"></h5>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
