- 내용 위치 잡음

--- a/src/main/resources/templates/main/memory.html
+++ b/src/main/resources/templates/main/memory.html
@@ -50,6 +50,9 @@
         <div class="anime__video__player">
           <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
         </div>
+        <div>
+          <p style="color: #ffffff"></p>
+        </div>
       </div>
     </div>
 <!--    <div class="row">-->
