--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -32,9 +32,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="anime__video__player">
-                        <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
-                    </div>
+                  <div class="anime__video__player">
+                      <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
+                  </div>
+                  <div>
+                    <p style="color: #ffffff">내 방 피규어들임. 가챠 모으는게 취미라서 ㅎㅎ</p>
+                  </div>
                 </div>
             </div>
             <div class="row">
