--- a/src/main/resources/templates/main/memory.html
+++ b/src/main/resources/templates/main/memory.html
@@ -30,21 +30,21 @@
 <!-- Anime Section Begin -->
 <section class="anime-details spad">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-8 col-sm-6">
-        <div class="section-title">
-          <h4>Memory list</h4>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-6">
-        <form th:action="@{/profile/category}">
-          <div class="input__item" style="float: right;">
-            <input type="text" name="keyword" placeholder="검색어">
-            <button type="submit" class="search-btn" style="width:46px; height: 31px;">검색</button>
-          </div>
-        </form>
-      </div>
-    </div>
+<!--    <div class="row">-->
+<!--      <div class="col-lg-8 col-md-8 col-sm-6">-->
+<!--        <div class="section-title">-->
+<!--          <h4>Memory list</h4>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-lg-4 col-md-4 col-sm-6">-->
+<!--        <form th:action="@{/profile/category}">-->
+<!--          <div class="input__item" style="float: right;">-->
+<!--            <input type="text" name="keyword" placeholder="검색어">-->
+<!--            <button type="submit" class="search-btn" style="width:46px; height: 31px;">검색</button>-->
+<!--          </div>-->
+<!--        </form>-->
+<!--      </div>-->
+<!--    </div>-->
     <div class="row">
       <div class="col-lg-12">
         <div class="anime__video__player">
