--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -36,7 +36,7 @@
                       <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
                   </div>
                   <div>
-                    <p style="color: #ffffff">내 방 피규어들임. 가챠 모으는게 취미라서 ㅎㅎ</p>
+                    <p style="color: #ffffff">내 방 피규어들임. 가챠 모으는게 취미라서 ㅎㅎ 일단 저장</p>
                   </div>
                 </div>
             </div>
