--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -33,10 +33,10 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="anime__video__player">
-                      <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
+                      <img th:src="${memory.getImage()}" style="border-radius: 10px;" alt="이미지"/>
                   </div>
                   <div>
-                    <p style="color: #ffffff">내 방 피규어들임. 가챠 모으는게 취미라서 ㅎㅎ 일단 저장</p>
+                    <p style="color: #ffffff" th:text="${memory.getContents()}"></p>
                   </div>
                 </div>
             </div>
@@ -55,39 +55,39 @@
                         <div class="section-title">
                             <h5>Comment</h5>
                         </div>
-                        <div class="anime__review__item" th:each="comment : ${profile.comments}">
+                        <div class="anime__review__item" th:each="comment : ${memory.getComments()}">
                             <div class="anime__review__item__pic">
                                 <img th:src="@{/images/profile/basic-profile-img.png}" alt="">
                             </div>
                             <div class="anime__review__item__text">
-                                <h6><span th:text="${comment.iflandNickName}" style="color: #ffffff"></span><span th:text="| - ${comment.dayAgo}|"></span></h6>
+                                <h6><span th:text="${comment.getIflandNickName()}" style="color: #ffffff"></span><span th:text="| - ${comment.getDayAgo()}|"></span></h6>
                                 <p th:text="${comment.contents}"></p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
-                    <div class="anime__details__sidebar">
-                        <div class="section-title">
-                            <h5>you might like! 😉</h5>
-                        </div>
-                        <div th:each="recommend : ${recommendList}">
-                            <a th:href="@{/profile/detail/{id}(id = ${recommend.id})}">
-                                <div class="product__sidebar__view__item set-bg" th:style="${'background-image: url('+ recommend.image + ')'}">
-                                    <div class="like">
-                                        <i class="fa fa-heart"></i>
-                                        <div class="like_count" th:text="${recommend.likeCount}" style="float: right; margin-left: 5px;"></div>
-                                    </div>
-                                    <div class="view">
-                                        <i class="fa fa-eye"></i>
-                                        <div class="view_count" th:text="${recommend.viewCount}" style="float: right; margin-left: 5px;"></div>
-                                    </div>
-                                    <h5 style="font-weight: bolder;" th:text="${recommend.iflandNickName}"></h5>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="col-lg-4 col-md-4">-->
+<!--                    <div class="anime__details__sidebar">-->
+<!--                        <div class="section-title">-->
+<!--                            <h5>you might like! 😉</h5>-->
+<!--                        </div>-->
+<!--                        <div th:each="recommend : ${recommendList}">-->
+<!--                            <a th:href="@{/profile/detail/{id}(id = ${recommend.id})}">-->
+<!--                                <div class="product__sidebar__view__item set-bg" th:style="${'background-image: url('+ recommend.image + ')'}">-->
+<!--                                    <div class="like">-->
+<!--                                        <i class="fa fa-heart"></i>-->
+<!--                                        <div class="like_count" th:text="${recommend.likeCount}" style="float: right; margin-left: 5px;"></div>-->
+<!--                                    </div>-->
+<!--                                    <div class="view">-->
+<!--                                        <i class="fa fa-eye"></i>-->
+<!--                                        <div class="view_count" th:text="${recommend.viewCount}" style="float: right; margin-left: 5px;"></div>-->
+<!--                                    </div>-->
+<!--                                    <h5 style="font-weight: bolder;" th:text="${recommend.iflandNickName}"></h5>-->
+<!--                                </div>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </section>
