--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -32,6 +32,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                    <div>
+                        <h3 style="color: #ffffff" th:text="${memory.getTitle()}"></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
                   <div class="anime__video__player">
                       <img th:src="${memory.getImage()}" style="border-radius: 10px;" alt="이미지"/>
                   </div>
