--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -42,9 +42,9 @@
                   <div class="anime__video__player">
                       <img th:src="${memory.getImage()}" style="border-radius: 10px;" alt="이미지"/>
                   </div>
-                  <div>
-                    <p style="color: #ffffff" th:text="${memory.getContents()}"></p>
-                  </div>
+                    <div class="anime__video__player">
+                        <p style="color: #ffffff" th:text="${memory.getContents()}"></p>
+                    </div>
                 </div>
             </div>
             <div class="row">
