--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -27,6 +27,7 @@
     </div>
     <!-- Breadcrumb End -->
 
+    <!-- TODO 일본 가기 전 작업 표시 -->
     <!-- Anime Section Begin -->
     <section class="anime-details spad">
         <div class="container">
