- 일본 가기 하루 전 주석 추가 ^^

--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -28,6 +28,7 @@
     <!-- Breadcrumb End -->
 
     <!-- TODO 일본 가기 전 작업 표시 -->
+    <!-- 일본가기 하루 전 나이스 브라보 ㄸㄸㅇ -->
     <!-- Anime Section Begin -->
     <section class="anime-details spad">
         <div class="container">
