- 일본 출발 당일 ^^

--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -29,6 +29,7 @@
 
     <!-- TODO 일본 가기 전 작업 표시 -->
     <!-- 일본가기 하루 전 나이스 브라보 ㄸㄸㅇ -->
+    <!-- 일본 출발 당일 ㅋㅋㅋ 가서 수정해야지 -->
     <!-- Anime Section Begin -->
     <section class="anime-details spad">
         <div class="container">
