- TODO 리스트 작성 - member id를 파라미터로 받아서 호출하도록 수정

--- a/src/main/resources/templates/main/save-memory.html
+++ b/src/main/resources/templates/main/save-memory.html
@@ -58,7 +58,7 @@
                         </div>
                         <form id="comment-form" onsubmit="return false;">
                             <textarea id="comment" placeholder="300자 이내로 작성해주세요."></textarea>
-                            <button id="comment-button" onclick="writeComment();"><i class="fa fa-location-arrow"></i> Comment</button>
+                            <button id="comment-button" onclick="writeComment(11);"><i class="fa fa-location-arrow"></i> Comment</button>
                         </form>
                     </div>
                     <div id="commentDiv" class="anime__details__review">
