--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -17,7 +17,7 @@
               <ul>
                 <li th:classappend="${cp eq 'home'} ? 'active' : ''"><a th:href="@{/}">홈</a></li>
                 <li th:classappend="${cp eq 'iflanderInfo'} ? 'active' : ''"><a th:href="@{/profile/category}">인물도감</a></li>
-                <li th:classappend="${cp eq 'memorize'} ? 'active' : ''"><a th:href="@{/memorize/content}">추억저장소</a></li>
+                <li th:classappend="${cp eq 'memorize'} ? 'active' : ''"><a th:href="@{/memorize/list}">추억저장소</a></li>
                 <li><a href="#">Contacts</a></li>
               </ul>
             </nav>
