--- a/src/main/resources/templates/main/memory.html
+++ b/src/main/resources/templates/main/memory.html
@@ -45,6 +45,7 @@
 <!--        </form>-->
 <!--      </div>-->
 <!--    </div>-->
+<!-- TODO 여기에 리스트를 넣어야 하는데 말이져.. -->
     <div class="row">
       <div class="col-lg-12">
         <div class="anime__video__player">
