--- a/src/main/resources/templates/main/profile-details.html
+++ b/src/main/resources/templates/main/profile-details.html
@@ -31,6 +31,7 @@
     </div>
     <!-- Breadcrumb End -->
 
+    <input type="hidden" id="profileId" th:value="${profile.id}">
     <!-- Anime Section Begin -->
     <section class="anime-details spad">
         <div class="container">
