--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -117,6 +117,11 @@ ol {
   Helper CSS
 -----------------------*/
 
+.not-fount {
+	color: white;
+	text-align: center;
+}
+
 .section-title {
 	margin-bottom: 30px;
 }
