--- a/src/main/resources/templates/main/profile-details.html
+++ b/src/main/resources/templates/main/profile-details.html
@@ -134,6 +134,7 @@
                                     <p th:text="${comment.contents}"></p>
                                 </div>
                             </div>
+                            <p th:if="${profile.comments.size()} == 0" class="not-fount">댓글이 존재하지 않습니다.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
