--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -113,6 +113,10 @@ ol {
 	margin: 0;
 }
 
+input::placeholder {
+	font-size: small;
+}
+
 /*---------------------
   Helper CSS
 -----------------------*/
