--- a/src/main/resources/templates/main/memory.html
+++ b/src/main/resources/templates/main/memory.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <!-- Breadcrumb End -->
-
+<!--　TODO 여기에 리스트 작성　-->
 <!-- Anime Section Begin -->
 <section class="anime-details spad">
   <div class="container">
