- 댓글창 크기 변경

--- a/src/main/resources/templates/main/memory-detail.html
+++ b/src/main/resources/templates/main/memory-detail.html
@@ -38,6 +38,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- TODO 이미지가 여러 개일 경우 옆으로 슬라이드하여 움직이는 기능 추가 -->
             <div class="row">
                 <div class="col-lg-12">
                   <div class="anime__video__player">
