--- a/src/main/resources/templates/main/memory-detail.html
+++ b/src/main/resources/templates/main/memory-detail.html
@@ -40,6 +40,7 @@
             </div>
 
             <!-- TODO 이미지가 여러 개일 경우 옆으로 슬라이드하여 움직이는 기능 추가 -->
+            <!-- 5개까지가 적절하지 않을까 싶음 -->
             <div class="row">
                 <div class="col-lg-12">
                   <div class="anime__video__player">
