- 댓글 최신 순으로 정렬 - 추억저장소용 댓글 기능 추가

--- a/src/main/resources/templates/main/memory-detail.html
+++ b/src/main/resources/templates/main/memory-detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="fragments/header :: header"/>
-<script th:src="@{/js/profile/detail.js}"></script>
+<script th:src="@{/js/memory/memory-detail.js}"></script>
 <body>
     <!-- Page Preloder -->
     <div id="preloder">
