--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -7,7 +7,7 @@
         <div class="col-lg-2">
           <div class="header__logo">
             <a href="/">
-              <img src="images/logo.png" alt="">
+              <img th:src="@{/images/main/logo.png}" alt="">
             </a>
           </div>
         </div>
