- 이미지 여러개 일 경우 셋팅

--- a/src/main/resources/templates/main/memory.html
+++ b/src/main/resources/templates/main/memory.html
@@ -31,13 +31,20 @@
 <section class="anime-details spad">
   <div class="container">
 <!-- TODO 여기에 리스트를 넣어야 하는데 말이져.. -->
-    <div class="row">
+    <div class="row" style="flex-wrap: nowrap;">
       <div class="col-lg-12">
         <div class="anime__video__player">
           <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
         </div>
-        <div>
-          <p style="color: #ffffff"></p>
+      </div>
+      <div class="col-lg-12">
+        <div class="anime__video__player">
+          <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="anime__video__player">
+          <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
         </div>
       </div>
     </div>
