--- a/src/main/resources/templates/main/memory.html
+++ b/src/main/resources/templates/main/memory.html
@@ -47,6 +47,16 @@
           <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
         </div>
       </div>
+      <div class="col-lg-12">
+        <div class="anime__video__player">
+          <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="anime__video__player">
+          <img src="/images/memory/그날.jpg" style="border-radius: 10px;" alt="이미지"/>
+        </div>
+      </div>
     </div>
     <!-- TODO 여기에 순서별 동그라미 -->
   </div>
